[package]
name = "hoster_tools"
version = "1.0.0"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.14", features=["blocking","cookies"] } 
select = "0.4.3"
regex = "1.7.1"