[package]
name = "hoster_tools"
version = "1.0.1"
authors = ["Tim <tim.tannert@tu-dortmund.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.23", features=["blocking","cookies"] } 
select = "0.6.0"
regex = "1.10.3"